--- a/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
+++ b/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:01:13 GMT
+    - Sat, 17 Jun 2017 23:59:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bNVBI1%2C1nv4ZTkPIfAqH-2; path=/
+    - PHPSESSID=OKx-U82t%2CvpS-yvyHq6gF2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:01:13 GMT
+recorded_at: Sat, 17 Jun 2017 23:59:12 GMT
