--- a/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
+++ b/www.nass.gov.ng/4d551db1043f94eb6c2722060f803dc2c067c0f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:03:56 GMT
+    - Sun, 18 Jun 2017 00:01:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yfsUBDrv1y4SfVz2HU%2COS2; path=/
+    - PHPSESSID=VIbGqGaqVMcHRXQEto8Tv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:03:56 GMT
+recorded_at: Sun, 18 Jun 2017 00:01:46 GMT
