--- a/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
+++ b/www.nass.gov.ng/12bfbb341dc7efdb28af220debe394f0d22849c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:17:02 GMT
+    - Sun, 18 Jun 2017 00:12:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=I-9cvlP2kIQ1SVFONkezM0; path=/
+    - PHPSESSID=%2CtANcgmK2Uf0aUhw9JAq91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:17:02 GMT
+recorded_at: Sun, 18 Jun 2017 00:12:44 GMT
