--- a/www.nass.gov.ng/28f9739b1f5254760ad96d61ba586d22f2d327cc.yml
+++ b/www.nass.gov.ng/28f9739b1f5254760ad96d61ba586d22f2d327cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:22:15 GMT
+    - Sun, 18 Jun 2017 00:18:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lmMgi-%2C4hVnUtixpZiQXl2; path=/
+    - PHPSESSID=rmkn%2CABKHdHV1HOb3OvG00; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:22:16 GMT
+recorded_at: Sun, 18 Jun 2017 00:18:33 GMT
