--- a/www.nass.gov.ng/2b91636a9735c36443c9638ee26d4083a4b3b49d.yml
+++ b/www.nass.gov.ng/2b91636a9735c36443c9638ee26d4083a4b3b49d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:28:55 GMT
+    - Sun, 18 Jun 2017 00:24:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ffpxbwliWsiURY-BmAgPV3; path=/
+    - PHPSESSID=qU7%2C2Jj-oNdFYQ7se6C%2Ci3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:28:55 GMT
+recorded_at: Sun, 18 Jun 2017 00:24:41 GMT
