--- a/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
+++ b/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:30:58 GMT
+    - Sun, 18 Jun 2017 00:26:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RzEP9S%2CI1pjjARFfMmzzx1; path=/
+    - PHPSESSID=meA-A2FT%2C8-W3lSBQn2Dz0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:30:58 GMT
+recorded_at: Sun, 18 Jun 2017 00:26:34 GMT
