--- a/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
+++ b/www.nass.gov.ng/da5a6c53569eb8eac1cb38a2aca8f09d5ba7f884.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:34:11 GMT
+    - Sun, 18 Jun 2017 00:30:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ADPLljrhSsH%2CrsYqtFqn11; path=/
+    - PHPSESSID=%2CjR9ibUsPPhthi57Ms63-0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:34:11 GMT
+recorded_at: Sun, 18 Jun 2017 00:30:14 GMT
