--- a/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
+++ b/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:34:32 GMT
+    - Sun, 18 Jun 2017 00:30:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aegwwNiuymZpfY0yd7M%2CV3; path=/
+    - PHPSESSID=xOmuy2YnF0BFXF3pIyG073; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:34:32 GMT
+recorded_at: Sun, 18 Jun 2017 00:30:30 GMT
