--- a/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
+++ b/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:42:45 GMT
+    - Sun, 18 Jun 2017 00:37:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m2NDO55z7C5lYr8PlkfAl1; path=/
+    - PHPSESSID=IYffUcgl1%2CrnCJwnnGqTe0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:42:45 GMT
+recorded_at: Sun, 18 Jun 2017 00:37:37 GMT
