--- a/www.nass.gov.ng/f5a3b102f1d664c0c113132ccc008b86ada59b7f.yml
+++ b/www.nass.gov.ng/f5a3b102f1d664c0c113132ccc008b86ada59b7f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:44:09 GMT
+    - Sun, 18 Jun 2017 00:39:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T8coFAEX1ox8QjPCvulZP3; path=/
+    - PHPSESSID=lQ5T%2CSBcSELxBZyem54dB3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:44:09 GMT
+recorded_at: Sun, 18 Jun 2017 00:39:16 GMT
