--- a/www.nass.gov.ng/7443f39aa69de93e5350eeb66edecba0b5c51979.yml
+++ b/www.nass.gov.ng/7443f39aa69de93e5350eeb66edecba0b5c51979.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:48:49 GMT
+    - Sun, 18 Jun 2017 00:43:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EFbYQOxTZCjUe605M87d61; path=/
+    - PHPSESSID=Onu6qvM%2Cj1Q1Cv41uJA1t1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:48:49 GMT
+recorded_at: Sun, 18 Jun 2017 00:43:38 GMT
