--- a/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
+++ b/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:50:17 GMT
+    - Sun, 18 Jun 2017 00:44:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3j7etg5huwRJWxqNf7U1M0; path=/
+    - PHPSESSID=OG%2C7YAYtOYTtMHGY8kCO91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:50:18 GMT
+recorded_at: Sun, 18 Jun 2017 00:44:21 GMT
