--- a/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
+++ b/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:50:49 GMT
+    - Sun, 18 Jun 2017 00:44:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-Bc31X%2CrR55U0GK5870Aw1; path=/
+    - PHPSESSID=keI4W-4mKWVIaosLLWeqm1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:50:49 GMT
+recorded_at: Sun, 18 Jun 2017 00:44:44 GMT
