--- a/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
+++ b/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:51:30 GMT
+    - Sun, 18 Jun 2017 00:45:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RDp4WEzm-8eaa%2Cl7ie0He2; path=/
+    - PHPSESSID=7vAr3XB9ZXRRA6v3wgVff0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:51:30 GMT
+recorded_at: Sun, 18 Jun 2017 00:45:08 GMT
