--- a/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
+++ b/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:51:52 GMT
+    - Sun, 18 Jun 2017 00:46:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2pV8ncVRcWbtS8Arsq8Aq0; path=/
+    - PHPSESSID=rwtOGx%2Cqn%2Cd0f8MILkBbK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:51:52 GMT
+recorded_at: Sun, 18 Jun 2017 00:46:08 GMT
