--- a/www.nass.gov.ng/cba54ce79db4598b44c5c1603039ee240d88a741.yml
+++ b/www.nass.gov.ng/cba54ce79db4598b44c5c1603039ee240d88a741.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:57:46 GMT
+    - Sun, 18 Jun 2017 00:52:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3WJzUyTabZpXXGZngaA9U1; path=/
+    - PHPSESSID=kczzfUPR0cgoJ%2CZYvs%2Cla2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:57:46 GMT
+recorded_at: Sun, 18 Jun 2017 00:52:15 GMT
