--- a/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
+++ b/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:05:14 GMT
+    - Sun, 18 Jun 2017 01:00:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QgFC9FnDHz-HqhiIAkt-S1; path=/
+    - PHPSESSID=jSEaqy2BS8achNA%2CS8Mvi1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:05:14 GMT
+recorded_at: Sun, 18 Jun 2017 01:00:22 GMT
