--- a/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
+++ b/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:09:40 GMT
+    - Sun, 18 Jun 2017 01:02:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2OBKCCNl0c%2CFzjAiUMmPS1; path=/
+    - PHPSESSID=2%2Cdqh2at6qw84JGyCVAln3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:09:40 GMT
+recorded_at: Sun, 18 Jun 2017 01:02:47 GMT
