--- a/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
+++ b/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:18:02 GMT
+    - Sun, 18 Jun 2017 01:11:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5lM%2CMHMP2PUSrlb07es%2Ct1; path=/
+    - PHPSESSID=iU1Pd8z6By2cmZGCbn3Vh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:18:02 GMT
+recorded_at: Sun, 18 Jun 2017 01:11:13 GMT
