--- a/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
+++ b/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:21:11 GMT
+    - Sun, 18 Jun 2017 01:13:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iZnj6pVhuIJGetbgtLrJ70; path=/
+    - PHPSESSID=Y%2CfMrrskEDFWQcMjUFJ-E0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:21:11 GMT
+recorded_at: Sun, 18 Jun 2017 01:13:53 GMT
