--- a/www.nass.gov.ng/df90af117f2581beae60688843183588aaf9fe46.yml
+++ b/www.nass.gov.ng/df90af117f2581beae60688843183588aaf9fe46.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:22:36 GMT
+    - Sun, 18 Jun 2017 01:14:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2yQbELAdhXw-KYXGQMlCJ0; path=/
+    - PHPSESSID=g%2CKP-Ze6yJtVhEQH9EcAA0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:22:36 GMT
+recorded_at: Sun, 18 Jun 2017 01:14:49 GMT
