--- a/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
+++ b/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:29:34 GMT
+    - Sun, 18 Jun 2017 01:21:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MIZUHUtXt4tRbcLDpbTWT3; path=/
+    - PHPSESSID=Yjqf16Ed2Fd1KRTnOXWa%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:29:34 GMT
+recorded_at: Sun, 18 Jun 2017 01:21:13 GMT
