--- a/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
+++ b/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:37:26 GMT
+    - Sun, 18 Jun 2017 01:27:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yuev5rO1HV6g8Ql72js%2Ce2; path=/
+    - PHPSESSID=2v4JR9iSH%2CQ7xGEMRURyK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:37:26 GMT
+recorded_at: Sun, 18 Jun 2017 01:27:26 GMT
