--- a/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
+++ b/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:43:12 GMT
+    - Sun, 18 Jun 2017 01:32:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IniM-QwywiBujnNspt1JP3; path=/
+    - PHPSESSID=tZnkvymj8tfqEpx%2C1C%2Cwo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:43:12 GMT
+recorded_at: Sun, 18 Jun 2017 01:32:35 GMT
