--- a/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
+++ b/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:45:07 GMT
+    - Sun, 18 Jun 2017 01:34:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Td08xGYJ0EVwolOQB5tdm1; path=/
+    - PHPSESSID=titgYgaoagF%2C6nutg1gdG3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:45:07 GMT
+recorded_at: Sun, 18 Jun 2017 01:34:44 GMT
