--- a/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
+++ b/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:47:53 GMT
+    - Sun, 18 Jun 2017 01:37:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oVRxE%2CAXX0L8ZcmJWM7dP0; path=/
+    - PHPSESSID=rQIkfeNStn5EFR0vHQRzb2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:47:53 GMT
+recorded_at: Sun, 18 Jun 2017 01:37:05 GMT
